devops/k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: loanlens-ingress
  namespace: loanlens-prod
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "30"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "10"
    nginx.ingress.kubernetes.io/limit-rps: "50"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx
  tls:
    - hosts: [loanlens.app, api.loanlens.app]
      secretName: loanlens-tls
  rules:
    - host: loanlens.app
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: loanlens-frontend
                port: { number: 80 }
    - host: api.loanlens.app
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: loanlens-backend
                port: { number: 8080 }
